# Agentic_AI

./: README.md
src/whatsappagent/: crew.py  main.py
src/whatsappagent/config/: README.md  agents.yaml
whatsappagent/: .gitignore  README.md  pyproject.toml
whatsappagent/src/whatsappagent/: crew.py
whatsappagent/src/whatsappagent/config/: agents.yaml  tasks.yaml
