[project]
name = "whatsappagent"
version = "0.1.0"
description = "whatsappAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
whatsappagent = "whatsappagent.main:run"
run_crew = "whatsappagent.main:run"
train = "whatsappagent.main:train"
replay = "whatsappagent.main:replay"
test = "whatsappagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
